--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,29 @@
 {
   "compileOnSave": false,
+  "buildOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "es2015",
+    "target": "es5",
     "moduleResolution": "node",
+    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es5",
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "declaration": false,
+    "strictNullChecks": true,
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
+      "es2017",
       "dom"
-    ]
-  }
+    ],
+    "baseUrl": "./src",
+    "paths": {}
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
