--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.2.2"
+    "typescript": "3.2.2",
+    "express": "4.16.4"
   },
   "engines": {
     "node": "8.9.4",
