--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "core-js": "2.6.5",
     "rxjs": "6.4.0",
     "tslib": "1.9.3",
-    "zone.js": "0.8.29"
+    "zone.js": "0.8.29",
+    "express": "4.16.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.13.3",
@@ -49,8 +50,7 @@
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.2.2",
-    "express": "4.16.4"
+    "typescript": "3.2.2"
   },
   "engines": {
     "node": "8.9.4",
